# databricks-exam-generator

./: .pre-commit-config.yaml  Introduction.py  README.md  pyproject.toml  requirements.txt  settings.toml
notebooks/: Untitled.ipynb  exam_to_json.ipynb
pages/: 1_Data_engineer_Associate_.py
questions/: build_data_pipeline_with_DLT_pyspark.json  build_data_pipeline_with_DLT_spark_sql.json  deploy_workloads_with_databricks_workflows.json  get_started_with_databricks_workspace.json  manage_data_access_with_unity_catalog.json  manage_data_with_delta_lake.json  transform_data_with_pyspark.json  transform_data_with_spark_sql.json
tests/: test_exam.py  test_loader.py
utils/: exam.py  loader.py
