[tool.poetry]
name = "databricks-exam-generator-20230228"
version = "0.1.0"
description = ""
authors = ["Arthur Couget <arthur.couget@viseo.com>"]
readme = "README.md"
packages = [{include = "databricks_exam_generator_20230228"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
