[tool.poetry]
name = "databricks-exam-generator-20230228"
version = "0.1.0"
description = ""
authors = ["Arthur Couget <arthur.couget@viseo.com>"]
readme = "README.md"
packages = [{include = "databricks_exam_generator_20230228"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
beautifulsoup4 = "^4.11.2"
pandas = "^1.5.3"
requests = "^2.28.2"
selenium = "^4.8.2"
lxml = "^4.9.2"
dynaconf = "^3.1.11"
streamlit = "^1.19.0"
black = "^23.1.0"
pre-commit = "^3.1.1"
ruff = "^0.0.253"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
